Add more explanation for Safety and Liveness Properties.

--- a/report.tex
+++ b/report.tex
@@ -255,7 +255,7 @@
 
   \subsection{Safety and Liveness Properties}
 
-  The \textit{always} and \textit{eventually} modalities are further referred as Safety and Liveness properties.
+  The \textit{always} and \textit{eventually} modalities can be further referred to as Safety and Liveness properties. These find their use case also in practice as they are the typical properties one would want to check in environments like distributed systems. For example to determine the responsiveness of a server or if a program terminates.
 
   \subsubsection{Safety Property}
 
