Reword bisimulation section.

--- a/report.tex
+++ b/report.tex
@@ -97,7 +97,7 @@
   \end{figure}
 
   The two coffee machines in \autoref{fig:coffee_machines} are trace equivalent but not strongly bisimilar because the resulting states are not related. As an example we can check what happens after inserting a coin. With the first coffee machine we reach state $P2$ and with the second coffee machine we reach either $Q2$ or $Q3$ depending on the choice of beverage.\\
-  So the process of inserting a coin and then either getting a coffee or a tea is the same but the path and most importantly the states are different.
+  So the process of inserting a coin and then either getting a coffee or a tea is the same but the actions that are possible after inserting a coin differ.
 
   \section{$\mu$-Calculus}
   As already mentioned before $\mu$-Calculus is an integral part of $mCRL2$. $\mu$-Calculus is an extension of propositional logic and therefore shares some similarities. \\
