--- a/report.tex
+++ b/report.tex
@@ -29,15 +29,11 @@
   \tableofcontents
 
   \section{Introduction}
-  This report is about \textit{mCRL2}, a modern toolset for process specification and model checking. We will discuss \textit{mCRL2} itself and the concepts it is based upon.
+  This report is about process calculi and \textit{mCRL2}, a modern toolset for process specification and model checking. We will discuss \textit{mCRL2} itself and the concepts it is based upon. We will provide a short overview of the model checking logic used by \textit{mCRL2}, \textit{$\mu$-Calculus}, for a more in-depth explanation on model checking please refer to the related report \textit{Model Checking on Büchi Automata} by Deni Juric and Thomas Wohlfarter.
 
-  \subsection{What is a Process Calculus?}
+  There are various process calculi like \textit{ACP}, \textit{CCS}, \textit{CSP}, \textit{Join-Calculus}, \textit{PEPA} and \textit{$\pi$-Calculus}. In short, a process calculus is an approach for formally modelling concurrent systems. It provides algebraic laws for analyzing and transforming process descriptions and permits formal reasoning about equivalences between processes (e.g. using bisimulation \cite{process_calculus_wiki}). We will focus on the process calculus and process specification syntax \textit{mCRL2} uses, which is based on the Algebra of Communicating Processes \cite{acp_wiki}.
 
-  A process calculus is an approach for formally modelling concurrent systems. Furthermore it is a tool for high-level description of interactions, communication and synchronization between processes. It also provides algebraic laws to allow analyzing and transforming process descriptions and permits formal reasoning about equivalences between processes (e.g. using bisimulation). \cite{process_calculus_wiki}
-
-  \subsection{Focus}
-
-  There are various forms of process calculi like \textit{ACP}, \textit{CCS}, \textit{CSP}, \textit{Join-Calculus}, \textit{PEPA} or \textit{$\pi$-Calculus}. However we are only going to focus on \textit{ACP} since it a core concept of \textit{mCRL2}.
+  We will also take a look at Labelled Transition Systems, since they are the low level counterpart to ACP and process calculi in general.
 
   \section{Labelled Transition Systems}
 
@@ -321,7 +317,7 @@
 
   \section{ACP}
 
-  ACP is the Algebra of Communicating Processes and is used to describe parallel and concurrent processes.
+  ACP is the Algebra of Communicating Processes and is used to describe parallel and concurrent processes. We will see later on that \textit{mCRL2} uses a syntax very close to the mathematical notation of ACP.
 
   In ACP, a process is defined \cite{acp_wiki} as follows:
 
