Describe the extension of propositional logic in µ-calculus.

--- a/report.tex
+++ b/report.tex
@@ -96,7 +96,7 @@
   So the process of inserting a coin and then either getting a coffee or a tea is the same but the actions that are possible after inserting a coin differ.
 
   \section{$\mu$-Calculus}
-  As already mentioned before $\mu$-Calculus is an integral part of $mCRL2$. $\mu$-Calculus is an extension of propositional logic and therefore shares some similarities. \\
+  As already mentioned before $\mu$-Calculus is an integral part of $mCRL2$. $\mu$-Calculus shares some similarities with propositional logic with the extension that we are now able to speak about actions and traces in processes. \\
   It is used to describe and verify properties of LTSs.
 
   \subsection{Hennessy-Milner Logic}
