--- a/report.tex
+++ b/report.tex
@@ -615,7 +615,7 @@ LTSs are equal (strong trace equivalence)
 
   \section{Conclusion}
 
-  TODO
+  In this report we heard about \texttt{mCRL2} and integral concepts which it is based on. Specifically we went over Labelled Transition Systems, \textit{ACP}, \textit{$\mu$-Calculus} in greater detail. In order to be able to talk about \texttt{mCRL2} we tried to show how the different concepts and logics depend on each other and how they relate to \texttt{mCRL2}. In the final chapter we then proceeded to showcase how we can test Bisimilarity and Trace Equivalence with \texttt{mCRL2}.
 
   \backmatter
 
