Reword bisimulation definition.

--- a/report.tex
+++ b/report.tex
@@ -76,8 +76,7 @@
   \end{figure}
 
   \subsection{Bisimulation}
-  Bisimulation is a binary relation between LTSs, where LTSs behave the same way in the sense
-  that one LTS simulates the other and vice versa. Bisimulation \cite{bisimulation_wiki} is not the only form of equivalence. We will show the difference between trace equivalence and strong bisimilarity as they are easy to show in an example.
+  Bisimulation is a binary relation between LTSs, where the related states of two LTSs behave the same way in the sense that each state has the same actions as its related state. Bisimulation \cite{bisimulation_wiki} is not the only form of equivalence. We will show the difference between trace equivalence and strong bisimilarity as they are easy to show in an example.
 
   \begin{itemize}[noitemsep]
     \item Trace equivalence: \\
