Make mCRL2 italic.

--- a/report.tex
+++ b/report.tex
@@ -592,7 +592,7 @@ lps2lts coffee_machine_2.lps coffee_machine_2.lts
 ltscompare --equivalence=bisim coffee_machine_1.lts coffee_machine_2.lts
   \end{lstlisting}
 
-  Again, all available equivalences can be seen in the tool's help page (\texttt{-h} flag) or in the \texttt{mCRL2} documentation \cite[ltscompare]{mcrl2doc}.
+  Again, all available equivalences can be seen in the tool's help page (\texttt{-h} flag) or in the \textit{mCRL2} documentation \cite[ltscompare]{mcrl2doc}.
 
   From the command, we get the following output:
 
@@ -614,9 +614,9 @@ LTSs are equal (strong trace equivalence)
 
   \section{Conclusion}
 
-  In this report we heard about \texttt{mCRL2} and integral concepts which it is based on. Specifically we went over Labelled Transition Systems, \textit{ACP}, \textit{$\mu$-Calculus} in greater detail. \\
-  In order to be able to talk about \texttt{mCRL2} we tried to show how the different concepts and logics depend on each other and how they relate to \texttt{mCRL2}. \\
-  In the final chapter we then proceeded to showcase how we can test Bisimilarity and Trace Equivalence with \texttt{mCRL2}.
+  In this report we heard about \textit{mCRL2} and integral concepts which it is based on. Specifically we went over Labelled Transition Systems, \textit{ACP}, \textit{$\mu$-Calculus} in greater detail. \\
+  In order to be able to talk about \textit{mCRL2} we tried to show how the different concepts and logics depend on each other and how they relate to \textit{mCRL2}. \\
+  In the final chapter we then proceeded to showcase how we can test Bisimilarity and Trace Equivalence with \textit{mCRL2}.
 
   \backmatter
 
