Add reference to mcrl2 book.

--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,12 @@
 	urldate = {2017-02-22},
 }
 
+@webpage{mcrl2book,
+	title   = {{Modelling and Analysis of Communicating Systems}},
+	url     = {http://www.win.tue.nl/~jfg/educ/2IW25/herfst2009/mcrl2-book.pdf},
+	urldate = {2017-02-22},
+}
+
 @webpage{process_calculus_wiki,
 	title   = {{P}rocess calculus --- {W}ikipedia},
 	url     = {https://en.wikipedia.org/wiki/Process_calculus},
