--- a/report.tex
+++ b/report.tex
@@ -209,7 +209,7 @@
   The modal formula $\langle true \rangle \langle a \rangle true$ expresses that an arbitrary action followed by an action a can be performed. \\
   The formula $[true]false$ expresses that no action can be done.
 
-  Regular formulae extend action formulae by allowing sequences of actions in modalities.
+  Regular formulae extend action formulae by allowing actions in modalities.
 
   \begin{align*}
     R ::= \epsilon\ |\ \mathit{af}\ |\ R\cdot{R}\ |\ R+R\ |\ R^*\ |\ R^+
