Fix citation position.

--- a/report.tex
+++ b/report.tex
@@ -33,7 +33,7 @@
 
   There are various process calculi like \textit{ACP}, \textit{CCS}, \textit{CSP}, \textit{Join-Calculus}, \textit{PEPA} and \textit{$\pi$-Calculus}. In short, a process calculus is an approach for formally modelling concurrent systems. It provides algebraic laws for analyzing and transforming process descriptions and permits formal reasoning about equivalences between processes (e.g. using bisimulation \cite{process_calculus_wiki}). We will focus on the process calculus and process specification syntax \textit{mCRL2} uses, which is based on the Algebra of Communicating Processes \cite{acp_wiki}.
 
-  We will also take a look at Labelled Transition Systems, since they are the low level counterpart to ACP and process calculi in general. The report is largely based on Modelling and Analysis of Communicating Systems by Jan Friso Groote and Michel Reniers. \cite{mcrl2book}
+  We will also take a look at Labelled Transition Systems, since they are the low level counterpart to ACP and process calculi in general. The report is largely based on Modelling and Analysis of Communicating Systems \cite{mcrl2book} by Jan Friso Groote and Michel Reniers.
 
   \section{Labelled Transition Systems}
 
