--- a/report.tex
+++ b/report.tex
@@ -99,7 +99,7 @@
   It is used to describe and verify properties of LTSs.
 
   \subsection{Hennessy-Milner Logic}
-  Hennessy-Milner Logic is a modal logic like LTL or CTL and for this reason we can see some relations. \\
+  Hennessy-Milner Logic is a modal logic like LTL or CTL and for this reason we can see some similarities. \\
   \begin{align*}
     \phi ::= \mathit{true}\ |\ \mathit{false}\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi
   \end{align*}
